--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -21,8 +22,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:stage": "env-cmd -f .env.stage react-scripts start",
+    "start:qa": "env-cmd -f .env.qa react-scripts start",
+    "start:production": "env-cmd -f .env.production react-scripts start",
+    "start:prod": "yarn run build && serve -s build",
     "build": "react-scripts build",
+    "build:stage": "env-cmd -f .env.stage react-scripts build",
+    "build:qa": "env-cmd -f .env.qa react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint  --fix src/**/*.ts",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
