--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
     "strict": true, // Enable all strict type checking options
     "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file.
-    "module": "esnext", // Specify module code generation
     "moduleResolution": "node", // Resolve modules using Node.js style
     "isolatedModules": true, // Unconditionally emit imports for unresolved files
     "resolveJsonModule": true, // Include modules imported with .json extension
@@ -23,7 +22,10 @@
     "noUnusedLocals": false, // Report errors on unused locals
     "noUnusedParameters": true, // Report errors on unused parameters
     "incremental": true, // Enable incremental compilation by reading/writing information from prior compilations to a file on disk
-    "noFallthroughCasesInSwitch": true // Report errors for fallthrough cases in switch statement
+    "noFallthroughCasesInSwitch": true ,// Report errors for fallthrough cases in switch statement
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "es2022",
   },
   "include": [
     "src/**/*" // *** The files TypeScript should type check ***
